# django-postgres-docker-compose

./: .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
apps/: urls.py
apps/products/: admin.py  models.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
compose/django-compose/: Dockerfile  start
compose/nginx/: Dockerfile  nginx.conf
root/: settings.py
